springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: tushardashpute/springboohello:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 33333
