springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
   app: springboot
spec:
  type: clusterIP
  ports:
  - port: 33333
    targetPort: 33333
    protocol: TCP
  selector:
    app: springboot
